k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    module: frontend
  name: portfolio
  namespace: portfolio
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  #loadBalancerIP: "35.187.24.10"
  selector:
    module: frontend
  sessionAffinity: None
  type: LoadBalancer
