k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    module: portfolio
  name: portfolio
  namespace: larsvanherk
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
#    - www.larsvanherk.com
#    - larsvanherk.com
    - staging.larsvanherk.com
    secretName: portfolio-tls
  rules:
#  - host: www.larsvanherk.com
#    http:
#      paths:
#      - path: /*
#        backend:
#          serviceName: portfolio
#          servicePort: 80
#  - host: larsvanherk.com
#    http:
#      paths:
#      - path: /*
#        backend:
#          serviceName: portfolio
#          servicePort: 80
  - host: staging.larsvanherk.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: portfolio-staging
          servicePort: 80
